tests/paczka1/fuzzy1/84385398.err
Error in line 4: NHdVbt A942 11,5
Error in line 6: NHdVbt S910 44,0
Error in line 10: NHdVbt S61 4,7
Error in line 14: NHdVbt A942 82,3
Error in line 16: zfRi82l S910 43,6
Error in line 20: zfRi82l A942 66,3
Error in line 22: pLYlxV7 S910 0,7
Error in line 29: vv2G S910 90,7
